--- a/home.html
+++ b/home.html
@@ -332,7 +332,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row cart_footer justify-content-center">
+                <div class="row col-md-8 cart_footer justify-content-center">
                     <img class="cart-icon" src="images/icon-running.svg" alt="">
                     <p>No purchase required to start. Sign up free and get started today!
                     </p>
