--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
 
     <body class="home-page">
         <div class="homesection">
+            <div class="head_wrapper">
             <div class="container">
                 <nav class="navbar navbar-expand-md navbar-light ">
                     <a class="navbar-brand logo" href="#">
@@ -40,9 +41,10 @@
                             <a href="" class="btn btn-positive ">Charity sign up</a>
                         </div>
                     </div>                     
-                </nav> 
+                </nav>
+                </div> 
             </div> 
-            <div class="menu_wrapper container">  
+            <div class="container">  
                 <div class=" row text_container align-item-center">
                     <div class=" col-md-6 text_box  ">  
                         <h1 class="text_title">Start your own 50-50 raffle today</h1>
@@ -53,7 +55,7 @@
                         </div>
                     </div>
                     <div class=" col-md-6 image_box" data-aos="zoom-in" data-aos-duration="1000" data-aos-offset="100">
-                        <img class="hero_image" src="images/main-image.png" alt="">
+                        <img class="hero_image" src="images/main-image.png" alt="charity-image">
                     </div>
                 </div>
             </div> 
