--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
             <div class="head_wrapper">
             <div class="container">
                 <nav class="navbar navbar-expand-md navbar-light ">
-                    <a class="navbar-brand logo" href="#">
+                    <a class="navbar-brand" href="#">
                             <img src="images/CharityLogo.png" alt="Charity-logo">
                         </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,8 +45,8 @@
                 </div> 
             </div> 
             <div class="container">  
-                <div class=" row text_container align-item-center">
-                    <div class=" col-md-6 text_box  ">  
+                <div class=" row text_container">
+                    <div class=" col-md-7 text_box">  
                         <h1 class="text_title">Start your own 50-50 raffle today</h1>
                         <h5 class="text_content">Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit.
                         </h5>
@@ -54,8 +54,10 @@
                             <a href="" class="btn btn-positive">Learn more</a>
                         </div>
                     </div>
-                    <div class=" col-md-6 image_box" data-aos="zoom-in" data-aos-duration="1000" data-aos-offset="100">
-                        <img class="hero_image" src="images/main-image.png" alt="charity-image">
+                    <div class=" col-md-5">
+                        <div class=" image_box">
+                            <img class="hero_image" src="images/main-image.png" alt="charity-image">
+                        </div>
                     </div>
                 </div>
             </div> 
@@ -123,54 +125,58 @@
                 </div>
             </div>
         </div>
-        <div class="dashboard">
+        <div class="dashboard_wrapper">
             <div class="container">
-                <h4 class="title_wrapper">All account come with amazing features</h4>
-                <div class="row align-items-center">
-                    <div class="column">
-                        <div class="dashboard_icon">
-                            <img src="images/Chart.png" alt="">
+                <div class="dashboard_top">
+                    <h4 class="title_wrapper">All account come with amazing features</h4>
+                </div>
+                <div class="dashboard_wrap">
+                    <div class="dashboard_wrap_list">
+                        <div class="column">
+                            <div class="dashboard_icon">
+                                <img src="images/Chart.png" alt="">
+                            </div>
+                            <h6 class="dashboard_title">Hosted Sales Page</h6>
+                            <p class="description">We host a unique Raffle page for you. No need to worry about technical set up.
+                            </p>
                         </div>
-                        <h6 class="dashboard_title">Hosted Sales Page</h6>
-                        <p class="description">We host a unique Raffle page for you. No need to worry about technical set up.
-                        </p>
-                    </div>
-                    <div class="column">
-                        <div class="dashboard_icon">
-                            <img src="images/Chart.png" alt="">
+                        <div class="column">
+                            <div class="dashboard_icon">
+                                <img src="images/Chart.png" alt="">
+                            </div>
+                            <h6 class="dashboard_title">Reporting Tool</h6>
+                            <p class="description">View and manage ticket sales, and generate tickets to mail to customers.
+                            </p>
                         </div>
-                        <h6 class="dashboard_title">Reporting Tool</h6>
-                        <p class="description">View and manage ticket sales, and generate tickets to mail to customers.
-                        </p>
-                    </div>
-                    <div class="column">
-                        <div class="dashboard_icon">
-                            <img src="images/Chart.png" alt="">
+                        <div class="column">
+                            <div class="dashboard_icon">
+                                <img src="images/Chart.png" alt="">
+                            </div>
+                            <h6 class="dashboard_title">Raffle Wizard</h6>
+                            <p class="description">Simple 5 step wizard to create your own raffle page.</p>
                         </div>
-                        <h6 class="dashboard_title">Raffle Wizard</h6>
-                        <p class="description">Simple 5 step wizard to create your own raffle page.</p>
-                    </div>
-                    <div class="column">
-                        <div class="dashboard_icon">
-                            <img src="images/Chart.png" alt="">
+                        <div class="column">
+                            <div class="dashboard_icon">
+                                <img src="images/Chart.png" alt="">
+                            </div>
+                            <h6 class="dashboard_title">Auto Bank Deposite</h6>
+                            <p class="description">Connect your bank account and receive automatic deposits from your ticket sales.</p>
                         </div>
-                        <h6 class="dashboard_title">Auto Bank Deposite</h6>
-                        <p class="description">Connect your bank account and receive automatic deposits from your ticket sales.</p>
-                    </div>
-                    <div class="column">
-                        <div class="dashboard_icon">
-                            <img src="images/Chart.png" alt="">
+                        <div class="column">
+                            <div class="dashboard_icon">
+                                <img src="images/Chart.png" alt="">
+                            </div>
+                            <h6 class="dashboard_title">Customer Management</h6>
+                            <p class="description">View and manage your customers. You own your customer data.</p>
                         </div>
-                        <h6 class="dashboard_title">Customer Management</h6>
-                        <p class="description">View and manage your customers. You own your customer data.</p>
-                    </div>
-                    <div class="column">
-                        <div class="dashboard_icon">
-                            <img src="images/Chart.png" alt="">
+                        <div class="column">
+                            <div class="dashboard_icon">
+                                <img src="images/Chart.png" alt="">
+                            </div>
+                            <h6 class="dashboard_title">License Management</h6>
+                            <p class="description">View and upload your AGLC licenses in our Dashboard. We can also help you apply for a license.</p>
                         </div>
-                        <h6 class="dashboard_title">License Management</h6>
-                        <p class="description">View and upload your AGLC licenses in our Dashboard. We can also help you apply for a license.</p>
-                    </div>
+                    </div>    
                 </div>
             </div>
         </div>
@@ -268,7 +274,7 @@
                     <h3 class="cart_title">Start building your raffles for free. Pay only when you’re ready to launch.
                     </h3>
                 </div> 
-                <div class="row cart_content justify-content-center">
+                <div class="row cart_content justify-content-center align-items-center">
                     <div class="col-md-6 box featured">
                         <div class="cart-box">
                             <p class="top-title">Run Your Own 50/50 Raffle</p>
@@ -372,18 +378,16 @@
         </div>          
         <div class="form_wrapper">
             <div class=" container">
-            <div class="row justify-content-center">
-                <div class="col-md-6 col-lg-5 newsetter-box text-center">
+                <div class="newsetter-box ">
                     <p class="top-title">Newsetter</p>
                     <h3>Stay on top of our latest news!</h3>
                     <form action="" method="post">
-                        <input class="email" type="email" name="email" placeholder="email@domain.com" required>
+                        <input class="email" type="email" name="email" value="email@domain.com" required>
                         <input class="submit" type="submit" value="Subscribe">
                       </form>
                       <p class="description">We don’t sell or misuse your email. You may unsubscribe at anytime.</p>
                 </div>
             </div>
-        </div>
         </div>  
         <footer>       
             <div class="footer-top">
