--- a/home.html
+++ b/home.html
@@ -46,15 +46,17 @@
             </div> 
             <div class="container">  
                 <div class=" row text_container">
-                    <div class=" col-md-7 text_box">  
-                        <h1 class="text_title">Start your own 50-50 raffle today</h1>
-                        <h5 class="text_content">Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit.
-                        </h5>
-                        <div class="text_button">
-                            <a href="" class="btn btn-positive">Learn more</a>
-                        </div>
+                    <div class=" left">
+                        <div class="text_box">  
+                            <h1 class="text_title">Start your own 50-50 raffle today</h1>
+                            <h5 class="text_content">Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit.
+                            </h5>
+                            <div class="text_button">
+                                <a href="" class="btn btn-positive">Learn more</a>
+                            </div>
+                        </div>    
                     </div>
-                    <div class=" col-md-5">
+                    <div class="right">
                         <div class=" image_box">
                             <img class="hero_image" src="images/main-image.png" alt="charity-image">
                         </div>
@@ -382,7 +384,7 @@
                     <p class="top-title">Newsetter</p>
                     <h3>Stay on top of our latest news!</h3>
                     <form action="" method="post">
-                        <input class="email" type="email" name="email" value="email@domain.com" required>
+                        <input class="email" type="email" name="email" placeholder="email@domain.com" required>
                         <input class="submit" type="submit" value="Subscribe">
                       </form>
                       <p class="description">We don’t sell or misuse your email. You may unsubscribe at anytime.</p>
