--- a/landing.html
+++ b/landing.html
@@ -11,7 +11,8 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
         <!-- Boxicons CSS -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-        <link rel="stylesheet" href="css/style.css"> 
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/landingstyle.css"> 
     </head>
 
     <body>
@@ -19,12 +20,16 @@
             <div class="menu_wrap">
                 <div class="container">
                     <nav class="navbar navbar-light">
-                        <div class="nav_menu_wrpper">
-                            <a class="navbar-brand logo" href="#">
-                                    <img src="images/CharityLogo.png" alt="Charity-logo">
+                        <div class="nav_menu_wrpper ml-auto">
+                            <a class="nav-logo" href="#">
+                                    <img src="images/5050-img.png" alt="Charity-logo">
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                                    <span class="navbar-toggler-icon"></span>
+                                    <div class="toggle_button">
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                    </div>
                             </button>
                         </div>
                         <div class="navbar-collapse collapse" id="navbarSupportedContent">
@@ -45,8 +50,122 @@
                         </div>                     
                     </nav>
                 </div> 
+            </div>
+            <div class="puma_wrapper">
+                <div class="container">
+                <div class="puma_wrap_content">
+                    <div class="puma_service_box">
+                        <div class="service_header">
+                            <div class="row align-items-center">
+                                <div class="col-md-7">
+                                    <div class="left">
+                                        <img src="images/pumalogo.svg" alt="puma-logo">
+                                        <span>Puma Charity Service</span>
+                                    </div>
+                                </div>
+                                <div class="col-md-5">
+                                    <div class="right">
+                                        <p>Visit us on</p>
+                                        <div class="media_wrap">
+                                            <a><img src="images/Facebook.svg" alt=""></a>
+                                            <a><img src="images/Twitter.svg" alt=""></a>
+                                            <a><img src="images/Instagram.svg" alt=""></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="service_body">
+                            <div class="service_content">
+                                <p class="top-title">Ending soon</p>
+                                <h3>Demo Holiday Raffle</h3>
+                                <p class="text">Your support of our Fall Lottery makes it possible to provide an
+                                     exceptional standard of care for thousands of animals every year. 
+                                </p>
+                                <div class="text_button">
+                                    <a href="" class="btn btn-positive">Buy tickets</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             </div> 
-        </div>    
+        </div>
+        
+        
+        <div class="about_wrapper">
+            <div class="aglc_content">
+                <div class="container">
+                    <div class="aglc_menu_wrap">
+                        <div class="row">
+                            <div class="col-md-5">
+                                <div class="left">
+                                    <h3>All that you wanted to know about this raffle</h3>
+                                    <div class="aglc_box">
+                                        <div class="square_box">
+                                            <img src="images/aglc_icon.png" alt="AGLC-icon">
+                                            <h6>AGLC</h6>
+                                            <p>Lottery License</p>
+                                            <p>#123456789</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-7">
+                                <div class="content_wrap">
+                                    <p>Your support of our Fall Lottery makes it possible to provide an exceptional
+                                        standard of care for thousands of animals every year. Your purchase ensures that our 
+                                        animals receive special attention including select diet, medication, surgery — even 
+                                        behaviour evaluations and training. 
+                                    </p>
+                                    <p>Every ticket purchased means another animal has a second chance at finding a new home.<br>
+                                    You must be a resident of Alberta and 18 years of age or older to purchase tickets.
+                                    </p>
+                                </div>   
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="white_box_wrapper row">
+                    <div class="white-box">
+                        <div class="col-md-3">
+                            <h2>
+                                <sup>$</sup>
+                                10
+                            </h2>
+                        </div>
+                        <div class="col-md-9">
+                            <form action="">
+								<div class="form-group">
+									<div class="input_content">
+										<select name="" id="">
+											<option value="">Select Ticket</option>
+											<option value="10 Tickets" selected>10 Tickets</option>
+                                            <option value="20 Tickets" selected>20 Tickets</option>
+                                            <option value="20 Tickets" selected>30 Tickets</option>
+										</select>
+									</div>
+									<div class="text_button">
+                                        <a href="" class="btn btn-positive">Buy tickets</a>
+                                    </div>
+								</div>
+								<p class="form_text">You’re saving 50% off with multiple tickets. Buy more tickets for higher savings.</p>
+							</form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+    </body>
+    </html>
+
 
 
 
