--- a/landing.html
+++ b/landing.html
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&Source+Sans+Pro:wght@300;400;600;700;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/owl.carousel.min.css">
+        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
         <script src="https://kit.fontawesome.com/f17b18449a.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
         <!-- Boxicons CSS -->
@@ -93,7 +94,6 @@
             </div> 
         </div>
         
-        
         <div class="about_wrapper">
             <div class="aglc_content">
                 <div class="container">
@@ -129,42 +129,254 @@
                 </div>
             </div>
             <div class="container">
-                <div class="white_box_wrapper row">
+                <div class="white_box_wrapper">
                     <div class="white-box">
-                        <div class="col-md-3">
-                            <h2>
-                                <sup>$</sup>
-                                10
-                            </h2>
-                        </div>
-                        <div class="col-md-9">
-                            <form action="">
-								<div class="form-group">
-									<div class="input_content">
-										<select name="" id="">
-											<option value="">Select Ticket</option>
-											<option value="10 Tickets" selected>10 Tickets</option>
-                                            <option value="20 Tickets" selected>20 Tickets</option>
-                                            <option value="20 Tickets" selected>30 Tickets</option>
-										</select>
-									</div>
-									<div class="text_button">
-                                        <a href="" class="btn btn-positive">Buy tickets</a>
+                        <div class="box_wrap">
+                            <div class="left">
+                                <h2><sup>$</sup>10</h2>
+                            </div>
+                            <div class="right">
+                                <form action="">
+                                    <div class="form-group">
+                                        <div class="input_content">
+                                            <select name="" id="select">
+                                                <option value="">Select Ticket</option>
+                                                <option value="10 Tickets" selected>10 Tickets</option>
+                                                <option value="20 Tickets" selected>20 Tickets</option>
+                                                <option value="20 Tickets" selected>30 Tickets</option>
+                                            </select>
+                                        </div>
+                                        <div class="text_button">
+                                            <a href="" class="btn btn-positive">Buy now</a>
+                                        </div>
                                     </div>
-								</div>
-								<p class="form_text">You’re saving 50% off with multiple tickets. Buy more tickets for higher savings.</p>
-							</form>
-                        </div>
+                                    <p class="form_text">You’re saving 50% off with multiple tickets. Buy more tickets for higher savings.</p>
+                                </form>
+                            </div>
+                        </div>    
                     </div>
                 </div>
             </div>
         </div>
 
+        <div class="milestones_wrapper">
+            <div class="container">
+                <div class="title_wrap">
+                    <h2>Important dates & milestones about the raffe</h2>
+                </div>
+                <div class="milestone_content">
+                    <ul>
+                        <li>
+                            <h4>
+                                <span>5:30 AM</span>
+                                <span>December 31, 2019</span>
+                            </h4>
+                            <span class="bottom_wrap">Ticket sales end</span>
+                        </li>
+                        <li>
+                            <h4>
+                                <span>5:30 AM</span>
+                                <span>December 02, 2019</span>
+                            </h4>
+                            <span class="bottom_wrap">Draw date</span>
+                        </li>
+                    </ul>
+                    <div class="text_button">
+                        <a href="" class="btn btn-buynow">Buy now</a>
+                    </div>
+                </div>    
+            </div>
+        </div>
 
-
-
+        <div class="aboutraffle_wrapper">
+            <div class="container">
+                <div class="aboutraffle_wrap">
+                    <div class="row">
+                        <div class="col-md-5">
+                            <div class="left">
+                                <h3>About this charity</h3>
+                            </div>
+                        </div>
+                        <div class="col-md-7">
+                            <div class="content_wrap">
+                                <p>Your support of our Fall Lottery makes it possible to provide an exceptional
+                                    standard of care for thousands of animals every year. Your purchase ensures that our 
+                                    animals receive special attention including select diet, medication, surgery — even 
+                                    behaviour evaluations and training. 
+                                </p>
+                                <p>Every ticket purchased means another animal has a second chance at finding a new home.<br>
+                                You must be a resident of Alberta and 18 years of age or older to purchase tickets.
+                                </p>
+                            </div>   
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="rules_wrapper">
+            <div class="container">
+                <h4 class="title_wrapper">Rules
+                    <img src="images/chevron_icon.svg" alt="raffle icon">
+                </h4> 
+                <div class="list_content">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="list_menu_wrap">
+                                <ul>
+                                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut.</li>
+                                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</li>
+                                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</li>
+                                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</li>
+                                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</li>
+                                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</li>
+                                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </li>
+                                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div> 
+                </div>
+            </div>
+        </div>
+        <div class="update_wrapper">
+            <div class="container">
+                <h4 class="title_wrapper">Updates</h4> 
+                <div class = "update_content_wrap owl-carousel">
+                    <div class = "testimonial_item">
+                        <div class = "testimonial_box">
+                            <div class="left">
+                                <img src="images/testimonry_img1.png" alt="">
+                            </div>
+                            <div class="right">
+                                <h6 class="top-title">Winning Ticket - B-GRIX-40710284</h6>
+                                <p>Congratulations to Patricia Suitor, the winner of our 50/50! Thank you to everyone who participated in our 50/50, the funds raised will help us continue getting seniors where they need to go!</p>
+                            </div>
+                        </div>
+                    </div>    
+                    <div class = "testimonial_item">
+                        <div class = "testimonial_box">
+                            <div class="left">
+                                <img src="images/testimonry_img2.png" alt="">
+                            </div>
+                            <div class="right">
+                                <h6 class="top-title">Winning Ticket - B-GRIX-40710284</h6>
+                                <p>Congratulations to Patricia Suitor, the winner of our 50/50! Thank you to everyone who participated in our 50/50, the funds raised will help us continue getting seniors where they need to go!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class = "testimonial_item">
+                        <div class = "testimonial_box">
+                            <div class="left">
+                                <img src="images/testimonry_img1.png" alt="">
+                            </div>
+                            <div class="right">
+                                <h6 class="top-title">Winning Ticket - B-GRIX-40710284</h6>
+                                <p>Congratulations to Patricia Suitor, the winner of our 50/50! Thank you to everyone who participated in our 50/50, the funds raised will help us continue getting seniors where they need to go!</p>
+                            </div>
+                        </div>
+                    </div>    
+                    <div class = "testimonial_item">
+                        <div class = "testimonial_box">
+                            <div class="left">
+                                <img src="images/testimonry_img2.png" alt="">
+                            </div>
+                            <div class="right">
+                                <h6 class="top-title">Winning Ticket - B-GRIX-40710284</h6>
+                                <p>Congratulations to Patricia Suitor, the winner of our 50/50! Thank you to everyone who participated in our 50/50, the funds raised will help us continue getting seniors where they need to go!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class = "testimonial_item">
+                        <div class = "testimonial_box">
+                            <div class="left">
+                                <img src="images/testimonry_img1.png" alt="">
+                            </div>
+                            <div class="right">
+                                <h6 class="top-title">Winning Ticket - B-GRIX-40710284</h6>
+                                <p>Congratulations to Patricia Suitor, the winner of our 50/50! Thank you to everyone who participated in our 50/50, the funds raised will help us continue getting seniors where they need to go!</p>
+                            </div>
+                        </div>
+                    </div>    
+                    <div class = "testimonial_item">
+                        <div class = "testimonial_box">
+                            <div class="left">
+                                <img src="images/testimonry_img2.png" alt="">
+                            </div>
+                            <div class="right">
+                                <h6 class="top-title">Winning Ticket - B-GRIX-40710284</h6>
+                                <p>Congratulations to Patricia Suitor, the winner of our 50/50! Thank you to everyone who participated in our 50/50, the funds raised will help us continue getting seniors where they need to go!</p>
+                            </div>
+                        </div>
+                    </div>    
+                    <div class = "testimonial_item">
+                        <div class = "testimonial_box">
+                            <div class="left">
+                                <img src="images/testimonry_img1.png" alt="">
+                            </div>
+                            <div class="right">
+                                <h6 class="top-title">Winning Ticket - B-GRIX-40710284</h6>
+                                <p>Congratulations to Patricia Suitor, the winner of our 50/50! Thank you to everyone who participated in our 50/50, the funds raised will help us continue getting seniors where they need to go!</p>
+                            </div>
+                        </div>
+                    </div>    
+                    <div class = "testimonial_item">
+                        <div class = "testimonial_box">
+                            <div class="left">
+                                <img src="images/testimonry_img2.png" alt="">
+                            </div>
+                            <div class="right">
+                                <h6 class="top-title">Winning Ticket - B-GRIX-40710284</h6>
+                                <p>Congratulations to Patricia Suitor, the winner of our 50/50! Thank you to everyone who participated in our 50/50, the funds raised will help us continue getting seniors where they need to go!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer class="landing_footer">       
+            <div class="container">
+                <div class="copy_right_text" >
+                    <span>Powered by</span>  
+                    <a class="footer_brand"><img src="images/footer-image.png" alt=""></a>
+                </div>
+            </div> 
+        </footer>    
+        <script src="js/jquery-3.4.1.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/owl.carousel.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="js/smooth-scroll.polyfills.min.js"></script>
+        <script>
+            $(document).ready(function(){
+                $('select').select2({
+                    width: '100%',
+                    minimumResultsForSearch: -1
+                });
+                $('.update_content_wrap.owl-carousel').owlCarousel({
+                    loop:false,
+                    margin:24,
+                    nav:false,
+                    autoplay:false,
+				    autoplayTimeout:3000,
+                    autoplayHoverPause:true,
+				    dots:true,
+                    responsive:{
+                        0:{
+                            items:2
+                        },
+                        768:{
+                            items:1
+                        },
+                        1025:{
+                            items:2
+                        }
+                    }
+                });
+            });
+        </script>    
     </body>
-    </html>
+</html>
 
 
 
