--- a/landing.html
+++ b/landing.html
@@ -214,7 +214,7 @@
         <div class="rules_wrapper">
             <div class="container">
                 <h4 class="title_wrapper">Rules
-                    <img src="images/chevron_icon.svg" alt="raffle icon" id="chevron_down_icon">
+                    <img src="images/chevron_icon.svg" alt="raffle icon" id="rules_chevron_down">
                 </h4> 
                 <div class="list_content">
                     <div class="row">
@@ -345,6 +345,7 @@
         <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="js/smooth-scroll.polyfills.min.js"></script>
+        <script src="js/script.js"></script>
         <script>
             $(document).ready(function(){
                 $('select').select2({
